package com.mealplan;

import java.awt.event.ActionEvent;

import javax.swing.JOptionPane;

public class JFrame extends javax.swing.JFrame {

    /**
     * Creates new form NewJFrame
     */
    public JFrame() {
        initComponents();
    }

    HashTable hashT = new HashTable();

    /**
     * This method is called from within the constructor to initialize the form.
     * WARNING: Do NOT modify this code. The content of this method is always
     * regenerated by the Form Editor.
     */
    @SuppressWarnings("unchecked")
    // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
    private void initComponents() {

        jDesktopPane1 = new javax.swing.JDesktopPane();
        jPanel1 = new javax.swing.JPanel();
        labelProject = new javax.swing.JLabel();
        labelMeal = new javax.swing.JLabel();
        labelDay = new javax.swing.JLabel();
        labelTime = new javax.swing.JLabel();
        dropdownDay = new javax.swing.JComboBox<>();
        dropdownTime = new javax.swing.JComboBox<>();
        inputMeal = new javax.swing.JTextField();
        btnInsert = new javax.swing.JButton();
        btnDelete = new javax.swing.JButton();
        btnSearch = new javax.swing.JButton();
        btnNewWeek = new javax.swing.JButton();
        jScrollPane2 = new javax.swing.JScrollPane();
        textArea = new javax.swing.JTextArea();
        inputNumber = new javax.swing.JTextField();
        labelNumber = new javax.swing.JLabel();
        jPanel2 = new javax.swing.JPanel();

        javax.swing.GroupLayout jDesktopPane1Layout = new javax.swing.GroupLayout(jDesktopPane1);
        jDesktopPane1.setLayout(jDesktopPane1Layout);
        jDesktopPane1Layout.setHorizontalGroup(
            jDesktopPane1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGap(0, 100, Short.MAX_VALUE)
        );
        jDesktopPane1Layout.setVerticalGroup(
            jDesktopPane1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGap(0, 100, Short.MAX_VALUE)
        );

        setDefaultCloseOperation(javax.swing.WindowConstants.EXIT_ON_CLOSE);
        setTitle("Meal Plan System");
        setResizable(false);

        jPanel1.setBackground(new java.awt.Color(22, 19, 15));

        labelProject.setBackground(new java.awt.Color(239, 223, 194));
        labelProject.setFont(new java.awt.Font("Lexend", 0, 30)); // NOI18N
        labelProject.setForeground(new java.awt.Color(229, 183, 105));
        labelProject.setText("Meal Plan System");

        labelMeal.setBackground(new java.awt.Color(255, 255, 255));
        labelMeal.setFont(new java.awt.Font("Lexend", 0, 24)); // NOI18N
        labelMeal.setForeground(new java.awt.Color(239, 223, 194));
        labelMeal.setText("Meal");

        labelDay.setBackground(new java.awt.Color(255, 255, 255));
        labelDay.setFont(new java.awt.Font("Lexend", 0, 24)); // NOI18N
        labelDay.setForeground(new java.awt.Color(239, 223, 194));
        labelDay.setText("Day");

        labelTime.setBackground(new java.awt.Color(255, 255, 255));
        labelTime.setFont(new java.awt.Font("Lexend", 0, 24)); // NOI18N
        labelTime.setForeground(new java.awt.Color(239, 223, 194));
        labelTime.setText("Time");

        dropdownDay.setBackground(new java.awt.Color(255, 255, 255));
        dropdownDay.setFont(new java.awt.Font("Lexend", 0, 18)); // NOI18N
        dropdownDay.setForeground(new java.awt.Color(51, 51, 51));
        dropdownDay.setModel(new javax.swing.DefaultComboBoxModel<>(new String[] { "- Select -", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday" }));
        dropdownDay.setToolTipText("Select a day");

        dropdownTime.setBackground(new java.awt.Color(255, 255, 255));
        dropdownTime.setFont(new java.awt.Font("Lexend", 0, 18)); // NOI18N
        dropdownTime.setForeground(new java.awt.Color(51, 51, 51));
        dropdownTime.setModel(new javax.swing.DefaultComboBoxModel<>(new String[] { "- Select -", "Morning", "Afternoon", "Evening" }));
        dropdownTime.setToolTipText("Select a time");

        inputMeal.setBackground(new java.awt.Color(255, 255, 255));
        inputMeal.setFont(new java.awt.Font("Lexend", 0, 18)); // NOI18N
        inputMeal.setForeground(new java.awt.Color(51, 51, 51));
        inputMeal.setToolTipText("Input meal name here");

        btnInsert.setBackground(new java.awt.Color(105, 118, 93));
        btnInsert.setFont(new java.awt.Font("Roboto", 0, 14)); // NOI18N
        btnInsert.setForeground(new java.awt.Color(255, 255, 255));
        btnInsert.setText("Insert");
        btnInsert.setToolTipText("");
        btnInsert.setBorder(null);
        btnInsert.setBorderPainted(false);
        btnInsert.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                btnInsertActionPerformed(evt);
            }
        });

        btnDelete.setBackground(new java.awt.Color(105, 118, 93));
        btnDelete.setFont(new java.awt.Font("Roboto", 0, 14)); // NOI18N
        btnDelete.setForeground(new java.awt.Color(255, 255, 255));
        btnDelete.setText("Delete");
        btnDelete.setToolTipText("");
        btnDelete.setBorder(null);
        btnDelete.setBorderPainted(false);
        btnDelete.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                btnDeleteActionPerformed(evt);
            }
        });

        btnSearch.setBackground(new java.awt.Color(105, 118, 93));
        btnSearch.setFont(new java.awt.Font("Roboto", 0, 14)); // NOI18N
        btnSearch.setForeground(new java.awt.Color(255, 255, 255));
        btnSearch.setText("Search");
        btnSearch.setToolTipText("");
        btnSearch.setBorder(null);
        btnSearch.setBorderPainted(false);
        btnSearch.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                btnSearchActionPerformed(evt);
            }
        });

        btnNewWeek.setBackground(new java.awt.Color(105, 118, 93));
        btnNewWeek.setFont(new java.awt.Font("Roboto", 0, 14)); // NOI18N
        btnNewWeek.setForeground(new java.awt.Color(255, 255, 255));
        btnNewWeek.setText("New Week");
        btnNewWeek.setToolTipText("");
        btnNewWeek.setBorder(null);
        btnNewWeek.setBorderPainted(false);
        btnNewWeek.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                btnNewWeekActionPerformed(evt);
            }
        });

        textArea.setBackground(new java.awt.Color(229, 239, 242));
        textArea.setColumns(20);
        textArea.setFont(new java.awt.Font("Lexend", 0, 14)); // NOI18N
        textArea.setForeground(new java.awt.Color(51, 51, 51));
        textArea.setRows(5);
        textArea.setWrapStyleWord(true);
        jScrollPane2.setViewportView(textArea);

        inputNumber.setBackground(new java.awt.Color(255, 255, 255));
        inputNumber.setFont(new java.awt.Font("Lexend", 0, 18)); // NOI18N
        inputNumber.setForeground(new java.awt.Color(51, 51, 51));
        inputNumber.setToolTipText("Input meal name here");

        labelNumber.setBackground(new java.awt.Color(255, 255, 255));
        labelNumber.setFont(new java.awt.Font("Lexend", 0, 24)); // NOI18N
        labelNumber.setForeground(new java.awt.Color(239, 223, 194));
        labelNumber.setText("No.");

        jPanel2.setBackground(new java.awt.Color(229, 183, 105));

        javax.swing.GroupLayout jPanel2Layout = new javax.swing.GroupLayout(jPanel2);
        jPanel2.setLayout(jPanel2Layout);
        jPanel2Layout.setHorizontalGroup(
            jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGap(0, 0, Short.MAX_VALUE)
        );
        jPanel2Layout.setVerticalGroup(
            jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGap(0, 25, Short.MAX_VALUE)
        );

        javax.swing.GroupLayout jPanel1Layout = new javax.swing.GroupLayout(jPanel1);
        jPanel1.setLayout(jPanel1Layout);
        jPanel1Layout.setHorizontalGroup(
            jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(jPanel1Layout.createSequentialGroup()
                .addGap(47, 47, 47)
                .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                    .addComponent(labelProject, javax.swing.GroupLayout.PREFERRED_SIZE, 324, javax.swing.GroupLayout.PREFERRED_SIZE)
                    .addGroup(jPanel1Layout.createSequentialGroup()
                        .addComponent(jScrollPane2, javax.swing.GroupLayout.PREFERRED_SIZE, 422, javax.swing.GroupLayout.PREFERRED_SIZE)
                        .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                            .addGroup(jPanel1Layout.createSequentialGroup()
                                .addGap(52, 52, 52)
                                .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                                    .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.TRAILING)
                                        .addComponent(labelMeal, javax.swing.GroupLayout.PREFERRED_SIZE, 67, javax.swing.GroupLayout.PREFERRED_SIZE)
                                        .addComponent(labelDay, javax.swing.GroupLayout.PREFERRED_SIZE, 67, javax.swing.GroupLayout.PREFERRED_SIZE)
                                        .addComponent(labelTime, javax.swing.GroupLayout.PREFERRED_SIZE, 67, javax.swing.GroupLayout.PREFERRED_SIZE))
                                    .addComponent(labelNumber))
                                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                                .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING, false)
                                    .addComponent(dropdownDay, 0, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
                                    .addComponent(dropdownTime, 0, 296, Short.MAX_VALUE)
                                    .addComponent(inputMeal)
                                    .addComponent(inputNumber, javax.swing.GroupLayout.PREFERRED_SIZE, 127, javax.swing.GroupLayout.PREFERRED_SIZE)))
                            .addGroup(jPanel1Layout.createSequentialGroup()
                                .addGap(121, 121, 121)
                                .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                                    .addGroup(jPanel1Layout.createSequentialGroup()
                                        .addComponent(btnInsert, javax.swing.GroupLayout.PREFERRED_SIZE, 115, javax.swing.GroupLayout.PREFERRED_SIZE)
                                        .addGap(18, 18, 18)
                                        .addComponent(btnDelete, javax.swing.GroupLayout.PREFERRED_SIZE, 115, javax.swing.GroupLayout.PREFERRED_SIZE))
                                    .addGroup(jPanel1Layout.createSequentialGroup()
                                        .addComponent(btnSearch, javax.swing.GroupLayout.PREFERRED_SIZE, 115, javax.swing.GroupLayout.PREFERRED_SIZE)
                                        .addGap(18, 18, 18)
                                        .addComponent(btnNewWeek, javax.swing.GroupLayout.PREFERRED_SIZE, 115, javax.swing.GroupLayout.PREFERRED_SIZE)))))))
                .addContainerGap(36, Short.MAX_VALUE))
            .addComponent(jPanel2, javax.swing.GroupLayout.Alignment.TRAILING, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
        );
        jPanel1Layout.setVerticalGroup(
            jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(jPanel1Layout.createSequentialGroup()
                .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                    .addGroup(jPanel1Layout.createSequentialGroup()
                        .addGap(171, 171, 171)
                        .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                            .addComponent(inputNumber, javax.swing.GroupLayout.PREFERRED_SIZE, 30, javax.swing.GroupLayout.PREFERRED_SIZE)
                            .addComponent(labelNumber))
                        .addGap(18, 18, 18)
                        .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                            .addComponent(labelMeal)
                            .addComponent(inputMeal, javax.swing.GroupLayout.PREFERRED_SIZE, 30, javax.swing.GroupLayout.PREFERRED_SIZE))
                        .addGap(18, 18, 18)
                        .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                            .addComponent(labelDay)
                            .addComponent(dropdownDay, javax.swing.GroupLayout.PREFERRED_SIZE, 30, javax.swing.GroupLayout.PREFERRED_SIZE))
                        .addGap(18, 18, 18)
                        .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                            .addComponent(labelTime)
                            .addComponent(dropdownTime, javax.swing.GroupLayout.PREFERRED_SIZE, 30, javax.swing.GroupLayout.PREFERRED_SIZE))
                        .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                            .addGroup(jPanel1Layout.createSequentialGroup()
                                .addGap(32, 32, 32)
                                .addComponent(btnDelete, javax.swing.GroupLayout.PREFERRED_SIZE, 38, javax.swing.GroupLayout.PREFERRED_SIZE))
                            .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, jPanel1Layout.createSequentialGroup()
                                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                                .addComponent(btnInsert, javax.swing.GroupLayout.PREFERRED_SIZE, 38, javax.swing.GroupLayout.PREFERRED_SIZE)))
                        .addGap(18, 18, 18)
                        .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                            .addComponent(btnSearch, javax.swing.GroupLayout.PREFERRED_SIZE, 38, javax.swing.GroupLayout.PREFERRED_SIZE)
                            .addComponent(btnNewWeek, javax.swing.GroupLayout.PREFERRED_SIZE, 38, javax.swing.GroupLayout.PREFERRED_SIZE)))
                    .addGroup(jPanel1Layout.createSequentialGroup()
                        .addGap(29, 29, 29)
                        .addComponent(labelProject)
                        .addGap(26, 26, 26)
                        .addComponent(jScrollPane2, javax.swing.GroupLayout.PREFERRED_SIZE, 506, javax.swing.GroupLayout.PREFERRED_SIZE)))
                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, 38, Short.MAX_VALUE)
                .addComponent(jPanel2, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
        );

        javax.swing.GroupLayout layout = new javax.swing.GroupLayout(getContentPane());
        getContentPane().setLayout(layout);
        layout.setHorizontalGroup(
            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addComponent(jPanel1, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
        );
        layout.setVerticalGroup(
            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addComponent(jPanel1, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
        );

        pack();
    }// </editor-fold>//GEN-END:initComponents

    private void btnInsertActionPerformed(java.awt.event.ActionEvent evt) {
        int inputNo = Integer.parseInt(inputNumber.getText());

        if (inputNumber.getText().equals("") || inputMeal.getText().equals("") || dropdownDay.getSelectedItem().toString().equals("- Select -") || dropdownTime.getSelectedItem().toString().equals("- Select -")) {
            JOptionPane.showMessageDialog(this, "Please enter all data.");
        } else if (inputNo > 21) {
            JOptionPane.showMessageDialog(this, "Invalid number. Insert keys between 0 - 20 only.");
        } else {
            hashT.add(inputNo, inputMeal.getText(), dropdownDay.getSelectedItem().toString(), dropdownTime.getSelectedItem().toString());

            textArea.setText("");
            textArea.append(hashT.display());

            JOptionPane.showMessageDialog(null, "Successfully added item.");

            inputNumber.setText("");
            inputMeal.setText("");
            dropdownDay.setSelectedItem("- Select -");
            dropdownTime.setSelectedItem("- Select -");
        }
    }

    private void btnDeleteActionPerformed(java.awt.event.ActionEvent evt) {
    
       int inputDel = Integer.parseInt(JOptionPane.showInputDialog(null, "Input index to delete: "));

        hashT.delete(inputDel);

        textArea.setText("");
        textArea.append(hashT.display());

        JOptionPane.showMessageDialog(null, "This entry has been deleted.");
    }

    private void btnSearchActionPerformed(java.awt.event.ActionEvent evt) {
        int inputFind = Integer.parseInt(JOptionPane.showInputDialog(null, "Input number to search: "));

        String result = hashT.find(inputFind);

        JOptionPane.showMessageDialog(null, "Number " + inputFind + " is " + result);
    }

    private void btnNewWeekActionPerformed(java.awt.event.ActionEvent evt) {

        hashT.newWeek();
        textArea.setText("");

        JOptionPane.showMessageDialog(null, "Let's plan a new week ahead!");
    }

    /**
     * @param args the command line arguments
     */
    public static void main(String args[]) {
    
        try {
            for (javax.swing.UIManager.LookAndFeelInfo info : javax.swing.UIManager.getInstalledLookAndFeels()) {
                if ("Nimbus".equals(info.getName())) {
                    javax.swing.UIManager.setLookAndFeel(info.getClassName());
                    break;
                }
            }
        } catch (ClassNotFoundException ex) {
            java.util.logging.Logger.getLogger(JFrame.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
        } catch (InstantiationException ex) {
            java.util.logging.Logger.getLogger(JFrame.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
        } catch (IllegalAccessException ex) {
            java.util.logging.Logger.getLogger(JFrame.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
        } catch (javax.swing.UnsupportedLookAndFeelException ex) {
            java.util.logging.Logger.getLogger(JFrame.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
        }
        //</editor-fold>
        //</editor-fold>

        /* Create and display the form */
        java.awt.EventQueue.invokeLater(new Runnable() {
            public void run() {
                new JFrame().setVisible(true);
            }
        });
    }

    // Variables declaration - do not modify//GEN-BEGIN:variables
    private javax.swing.JButton btnDelete;
    private javax.swing.JButton btnInsert;
    private javax.swing.JButton btnNewWeek;
    private javax.swing.JButton btnSearch;
    private javax.swing.JComboBox<String> dropdownDay;
    private javax.swing.JComboBox<String> dropdownTime;
    private javax.swing.JTextField inputMeal;
    private javax.swing.JTextField inputNumber;
    private javax.swing.JDesktopPane jDesktopPane1;
    private javax.swing.JPanel jPanel1;
    private javax.swing.JPanel jPanel2;
    private javax.swing.JScrollPane jScrollPane2;
    private javax.swing.JLabel labelDay;
    private javax.swing.JLabel labelMeal;
    private javax.swing.JLabel labelNumber;
    private javax.swing.JLabel labelProject;
    private javax.swing.JLabel labelTime;
    private javax.swing.JTextArea textArea;
    // End of variables declaration//GEN-END:variables
}
